# nebokrai-python-prototype

./: .envrc  .gitignore  README.md  _pyproject.toml  coverage.json  flake-old.nix  flake.nix  migration.hs  pyproject.toml  shell.nix
.viz/: pydeps.txt  run.sh
assets/: NORGSPECIFICATION.norg  backlog.norg  calendar.norg  completed.norg  dayagendas.norg  projects.norg  roadmaps.norg  routines.norg  tasks.norg
assets/days/: 2023-05-27.norg  2023-05-28.norg  2023-05-29.norg  2023-05-30.norg  2023-05-31.norg  2023-06-01.norg  2023-06-02.norg
assets/projects/notes_reading_projects/: a.norg  fb_lowlevel.norg  h.norg
assets/projects/work_projects/: instantli_nlq.norg
assets/reference/: NORGINTRO.norg  NORGSEMANTICS.norg
assets/roadmaps/: cs_roadmap.norg  ds_roadmap.norg  fitness_roadmap.norg  math_roadmap.norg  misc_reading_roadmap.norg  neuro_psycholinguistics_roadmap.norg  nlp_cl_roadmap.norg  nonenglish_roadmap.norg  notes_reading_roadmap.norg  other_projects_roadmap.norg  papers_roadmap.norg  personalized_polyglot_roadmap.norg  work_roadmap.norg
assets/tmp/: backlog_alg.norg  backlog_c++.norg  backlog_c.norg  backlog_compiler.norg  backlog_cs.norg  backlog_cv.norg  backlog_dl.norg  backlog_docker.norg  backlog_ds.norg  backlog_git.norg  backlog_java.norg  backlog_javascript.norg  backlog_kubernetes.norg  backlog_language_study.norg  backlog_ling.norg  backlog_low_level.norg  backlog_math.norg  backlog_ml.norg  backlog_nlp.norg  backlog_other.norg  backlog_papers.norg  backlog_prog.norg  backlog_python.norg  tmp_backlog.py  tmp_projects.norg  tmp_projects.py
haskell/: Nebokrai.hs
old/: entry_scratch.py  html_paths.py  json_paths.py  norg_header.py  norg_item.py  norg_paths.py  norg_section.py  scheduling_  test_entry_adding.py  test_scheduling.py
old/path_test/: test_html_paths.py  test_json_paths.py  test_norg_paths.py  test_path_manager.py
pydeps/: pydeps.txt  run.sh
schemata/declaration/: calendar-schema.json  tracking-schema.json
schemata/derivation/: plan-schema.json
scripts/: basic.py  jira_sync.sh  old_basic.py  validate.sh
src/nebokrai/: __init__.py  __main__.py  cli.py  configuration.py  logger.py  nebokrai.py
src/nebokrai/cli/: __init__.py
src/nebokrai/cli/commands/: __init__.py  base.py  check_off.py  dashboard.py  declaration.py  derivation.py  derive.py  generations.py  revert.py  sync.py  track.py  tracking.py  validate.py
src/nebokrai/cli/parser/: __init__.py  argument_parser.py
src/nebokrai/derivation/: __init__.py
src/nebokrai/entity/base/: calendar.py  entry.py  plan.py  project.py  roadmap.py  routine.py  schedule.py  task.py
src/nebokrai/entity/container/: entries.py  projects.py  roadmaps.py  routines.py  schedules.py  tasks.py
src/nebokrai/tracking/: README.md  __init__.py  logs.py  tracker.py  tracker_item.py
src/nebokrai/util/: __init__.py  color.py  elementary_types.py  entity_ids.py  regex.py  shift_declaration.py
src/nebokrai/util/nkdatetime/: __init__.py  nkdate.py  nktime.py
src/nebokrai/util/pdatetime/: pdate.py  ptime.py
src/nebokrai/util/prompt/: __init__.py  prompt_config.py  prompt_functions.py  type_conversion.py
src/nebokrai/util/serde/: custom_dict_types.py  deserialization.py  for_config.py
src/nebokrai/validation/: __init__.py  native_validation.py
src/planager/: __init__.py  __main__.py  cli.py  config.py  configuration.py  logger.py  planager.py  validation.py
src/planager/derivation/: __init__.py
src/planager/entities/: __init__.py  adhoc.py  calendar.py  day.py  entry.py  patch.py  plan.py  planager.py  project.py  roadmap.py  routine.py  schedule.py  task.py  universe.py
src/planager/entity/: __init__.py
src/planager/entity/base/: _plan_new.py  adhoc.py  calendar.py  entry.py  plan.py  plan_old.py  project.py  roadmap.py  routine.py  schedule.py  task.py
src/planager/operator/: __init__.py  planner.py  scheduler.py
src/planager/operators/: __init__.py  adjuster.py  planner.py  scheduler.py  taskmaker.py
src/planager/tracking/: README.md  logs.py  tracker.py  tracker_item.py
src/planager/util/: __init__.py  check.py  checks.py  datetime_extensions.py  elementary_types.py  entity_ids.py  misc.py  path_manager.py  pdatetime.py  prompt.py  regex.py  shift_declaration.py  type.py
src/planager/utils/: checks.py  datetime_extensions.py  day.py  linewrap.py  misc.py  regex.py  scheduling_helpers.py
t_old/: scheduling_  test_entry_adding.py  test_scheduling.py
test/: conftest.py  test_config.py  test_entry_adding.py  test_init.py  test_logger.py  test_main.py  test_planager.py  test_schemata.py  util.py
test/data/: norg1.norg
test/data/_norg_test/: norg1.norg
test/entities_test/: test_schedule.py
test/entity_test/base_test/: test_adhoc.py  test_calendar.py  test_entry.py  test_plan.py  test_project.py  test_roadmap.py  test_routine.py  test_schedule.py  test_task.py
test/entity_test/container_test/: test_entries.py  test_projects.py  test_roadmaps.py  test_routines.py  test_schedules.py  test_tasks.py
test/entity_test/patch_test/: test_plan_patch.py  test_schedule_patch.py  test_task_patch.py
test/operator_test/: planner_test.py  test_planner.py  test_scheduler.py
test/operator_test/patcher_test/: test_plan_patcher.py  test_schedule_patcher.py  test_task_patcher.py
test/test_scheduling/: test_scheduling_atomic.py  test_scheduling_intermediate.py
test/test_util/: test_entity_ids.py  test_misc.py  test_nkdate.py  test_nktime.py  test_pdate.py  test_prompt.py  test_ptime.py
test/test_util/test_prompt/: test_prompt_atomic.py  test_prompt_config.py  test_prompt_from_json.py
test/util/: __init__.py
test/util_test/: test_misc.py  test_path_manager.py  test_regex.py  test_type.py
test/util_test/data_test/: test_html.py  test_json.py  test_norg.py  test_norg_item.py  test_norg_item_head.py
test/util_test/display_test/: test_repr.py
test/util_test/pdatetime_test/: test_pdate.py  test_pdatetime.py  test_ptime.py
test/utils_test/data_test/: norg_test.py
tests/: test_entry_adding.py
viz/: pydeps.txt  run.sh  util-pydeps.txt
(+132 files in other folders)
