[tool.poetry]
name = "planager"
version = "0.1.0"
description = "Python prototype of a tool for planning, prioritizing, and tracking. Designed by me for me to be an all-in-one way to stay organized"
authors = ["Isaac Riley <isaac.r.riley@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pydeps = "^1.12.8"
pylint = "^3.0.1"

[tool.poetry.scripts]
planager = "planager.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ['old', '.venv']

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.pylint]
# disable = ["C0114", "R0902", "R0913", "R0914"]
disable = [
    "C0114", 
    "R0902", 
    "R0904", 
    "R0913", 
    "R0914", 
    "W0511"
]
no-docstring-rgx = "^_|copy|from_string|fromordinal|today|get_task|get_project|get_arg_parser|main"
docstring-min-length = 3

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "test"
python_classes = "*Test"
